# Med_AI

./: .gitignore  DESIGN.md  README.md  docker-compose.yml  nginx.conf  package-lock.json  package.json
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 1f3a9c7d2b11_add_doctor_source_fields.py  947ab1fc1411_initial.py  9c0d3c4a1f22_add_incidents_table.py  a1f54c8be231_add_typed_ocr_report_tables.py  b2c8e4a1f3d0_add_doctor_availability_timezone.py  c4d5e6f7a8b9_add_doctor_years_experience.py  e1d2f3b4c5d6_add_incident_description.py
backend/app/: config.py  dependencies.py  main.py
backend/app/core/: exceptions.py  permissions.py  security.py
backend/app/database/: base.py  session.py
backend/app/modules/ai/: chatbot.py  models.py  router.py  schemas.py  tools.py
backend/app/modules/appointments/: models.py  router.py  schemas.py  service.py
backend/app/modules/auth/: models.py  router.py  schemas.py  service.py
backend/app/modules/incidents/: models.py  router.py  schemas.py  service.py  storage.py
backend/app/modules/ocr/: constants.py  evaluation.py  extractor.py  models.py  parser.py  pipeline.py  router.py  schemas.py  shared.py
backend/app/modules/reports/: models.py  router.py  schemas.py  service.py  (+1 more)
backend/app/workers/: celery_app.py  notification_worker.py  ocr_worker.py
backend/scripts/: README.md  import_doctors_csv.py  set_doctor_availability.py
backend/scripts/data/: README.md  doctors.csv
backend/tests/: test_availability.py
(+167 files in other folders)
